[Fixed responsive issue where welcome image wasn't showing correctly on Mobile Desktop View, but struggling to keep Welcome and the Nav buttons close on the screen]

--- a/src/components/DesktopHeader.css
+++ b/src/components/DesktopHeader.css
@@ -15,7 +15,7 @@
 	margin: 0;
 }
 .mobile-hidden {
-	display: none;
+/* Removed to prevent nav not showing on mobile	display: none; */
 }
 
 @media (min-width: 40rem) {
